--- a/contacts.html
+++ b/contacts.html
@@ -85,8 +85,8 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <div class="card-content-new">
-                            <h3>Наша адреса</h3>
-                            <p>Україна, 09100, Київська обл., Білоцерківський р-н, місто Біла Церква, вул.Глазкова Максима, будинок 2</p>
+                            <h3>Адреса для прийому та обслуговування споживачів</h3>
+                            <p>01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74</p>
                         </div>
                         <div class="card-action-new">
                             <a href="#" class="action-link-new">
@@ -167,7 +167,7 @@
                         </div>
                         <div class="card-content-new">
                             <h3>Юридична адреса</h3>
-                            <p>Україна, 09100, Київська обл., Білоцерківський р-н, місто Біла Церква, вул.Глазкова Максима, будинок 2</p>
+                            <p>01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74</p>
                         </div>
                         <div class="card-action-new">
                             <a href="#" class="action-link-new">
@@ -189,8 +189,8 @@
                             <div class="building-detail">
                                 <i class="fas fa-map-marker-alt"></i>
                                 <div>
-                                    <strong>Адреса:</strong>
-                                    <p>Україна, 09100, Київська обл., Білоцерківський р-н, місто Біла Церква, вул.Глазкова Максима, будинок 2</p>
+                                    <strong>Адреса для прийому та обслуговування споживачів:</strong>
+                                    <p>01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74</p>
                                 </div>
                             </div>
                             <div class="building-detail">
@@ -289,7 +289,7 @@
                 </div>
                 <div class="map-container-new">
                     <div class="map-iframe-container">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.5!2d30.1!3d49.8!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDnCsDQ4JzAwLjAiTiAzMMKwMDYnMDAuMCJF!5e0!3m2!1suk!2sua!4v1234567890123!5m2!1suk!2sua" 
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.0!2d30.5230!3d50.4418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf0a3c3b3c3b%3A0x3c3b3c3b3c3b3c3b!2z0LLRg9C7LiDQkdC-0LPQvtC80L7Qu9GM0YbRjywgNy8xNCwg0JrQuNGX0LI!5e0!3m2!1suk!2sua!4v1700000000000!5m2!1suk!2sua" 
                                 width="600" 
                                 height="450" 
                                 style="border:0;" 
@@ -299,7 +299,7 @@
                         </iframe>
                         <div class="map-address-new">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Україна, 09100, Київська обл., Білоцерківський р-н, місто Біла Церква, вул.Глазкова Максима, будинок 2</span>
+                            <span>01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74</span>
                         </div>
                     </div>
                 </div>
@@ -314,7 +314,7 @@
                 <div class="footer-section">
                     <h4>Контакти</h4>
                     <div class="footer-contact">
-                        <p><i class="fas fa-map-marker-alt"></i> Україна, 09100, Київська обл., Білоцерківський р-н, місто Біла Церква, вул.Глазкова Максима, будинок 2</p>
+                        <p><i class="fas fa-map-marker-alt"></i> 01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74</p>
                         <p><i class="fas fa-phone"></i> +380509739567</p>
                         <p><i class="fas fa-envelope"></i> o.t.dubova@gmail.com</p>
                     </div>
