--- a/gas-supply.html
+++ b/gas-supply.html
@@ -68,14 +68,162 @@
                 </div>
                 
                 <div class="documents-grid-new">
-                    <!-- Additional Documents Category -->
+                    <!-- Laws Category -->
+                    <div class="category-section-new">
+                        <div class="category-header-new">
+                            <div class="category-icon-new">
+                                <i class="fas fa-balance-scale"></i>
+                            </div>
+                            <div class="category-info-new">
+                                <h3>Нормативні документи (ГАЗ)</h3>
+                                <p>Основні законодавчі акти, що регулюють діяльність на ринку природного газу</p>
+                            </div>
+                        </div>
+                        
+                        <div class="documents-list-new">
+                            <div class="document-item-new">
+                                <div class="document-number-new">01</div>
+                                <div class="document-content-new">
+                                    <h4>Закон України «Про ринок природного газу»</h4>
+                                    <p>Основний законодавчий акт, що регулює діяльність на ринку природного газу України</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/329-19#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">02</div>
+                                <div class="document-content-new">
+                                    <h4>Постанова від 30.09.2015 № 2493 Про затвердження Кодексу газотранспортної системи</h4>
+                                    <p>Регулює порядок використання газотранспортної системи України</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/z1378-15#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">03</div>
+                                <div class="document-content-new">
+                                    <h4>Закон України Про Національну комісію, що здійснює державне регулювання у сферах енергетики та комунальних послуг</h4>
+                                    <p>Визначає повноваження та порядок діяльності НКРЕКП</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/1540-19#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">04</div>
+                                <div class="document-content-new">
+                                    <h4>Постанова від 30.09.2015 № 2494 Про затвердження Кодексу газорозподільних систем</h4>
+                                    <p>Регулює порядок використання газорозподільних систем</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/z1379-15#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">05</div>
+                                <div class="document-content-new">
+                                    <h4>Постанова від 30.09.2015 № 2496 Про затвердження Правил постачання природного газу</h4>
+                                    <p>Визначає правила постачання природного газу споживачам</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/z1382-15#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">06</div>
+                                <div class="document-content-new">
+                                    <h4>Порядок укладання договору з постачання природного газу</h4>
+                                    <p>Регулює порядок укладання договорів постачання природного газу</p>
+                                    <a href="https://www.nerc.gov.ua/sferi-diyalnosti/prirodnij-gaz/pobutovi-spozhивачами/ukladennya-dogovoriv-pobutovimi-spozhивачами/ukladannya-dogovoru-z-postachannya-prirodnogo-gazu" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">07</div>
+                                <div class="document-content-new">
+                                    <h4>Постанова НКРЕКП від 16.02.2017 № 201 Про затвердження Ліцензійних умов провадження господарської діяльності на ринку природного газу</h4>
+                                    <p>Визначає умови ліцензування діяльності на ринку природного газу</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/v0201874-17#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">08</div>
+                                <div class="document-content-new">
+                                    <h4>Закон України від 25.12.2015 № 922-VIII Про публічні закупівлі</h4>
+                                    <p>Регулює порядок проведення публічних закупівель</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/922-19#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">09</div>
+                                <div class="document-content-new">
+                                    <h4>Постанова НКРЕКП від 21.09.2017 №1156 Про затвердження Мінімальних стандартів та вимог до якості обслуговування споживачів та постачання природного газу</h4>
+                                    <p>Визначає мінімальні стандарти якості обслуговування споживачів</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/v1156874-17#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">10</div>
+                                <div class="document-content-new">
+                                    <h4>Закон України «Про захист економічної конкуренції»</h4>
+                                    <p>Визначає правові засади захисту економічної конкуренції в Україні</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/2210-14#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">11</div>
+                                <div class="document-content-new">
+                                    <h4>Закон України «Про захист персональних даних»</h4>
+                                    <p>Встановлює правові засади захисту персональних даних</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/2297-17#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="document-item-new">
+                                <div class="document-number-new">12</div>
+                                <div class="document-content-new">
+                                    <h4>Закон України «Про особливості доступу до інформації у сферах постачання електричної енергії, природного газу, теплопостачання, централізованого постачання гарячої води, централізованого питного водопостачання та водовідведення»</h4>
+                                    <p>Визначає особливості доступу до інформації у сферах енергетики та комунальних послуг</p>
+                                    <a href="https://zakon.rada.gov.ua/laws/show/887-19#Text" target="_blank" class="document-link-new">
+                                        <span>Переглянути документ</span>
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- PDF Documents Category -->
                     <div class="category-section-new">
                         <div class="category-header-new">
                             <div class="category-icon-new">
                                 <i class="fas fa-file-contract"></i>
                             </div>
                             <div class="category-info-new">
-                                <h3>Нормативні документи (ГАЗ)</h3>
+                                <h3>Документи компанії (ГАЗ)</h3>
                                 <p>Документи та матеріали з постачання природного газу</p>
                             </div>
                         </div>
@@ -238,7 +386,7 @@
                                 <span>Місцезнаходження будівель та приміщень для прийому та обслуговування споживачів:</span>
                             </div>
                             <div class="contact-value">
-                                Україна, 09100, Київська обл., Білоцерківський р-н, місто Біла Церква, вул.Глазкова Максима, будинок 2
+                                01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74
                             </div>
                         </div>
                         <div class="contact-item">
@@ -286,7 +434,7 @@
                 <div class="footer-section">
                     <h4>Контакти</h4>
                     <div class="footer-contact">
-                        <p><i class="fas fa-map-marker-alt"></i> Україна, 09100, Київська обл., Білоцерківський р-н, місто Біла Церква, вул.Глазкова Максима, будинок 2</p>
+                        <p><i class="fas fa-map-marker-alt"></i> 01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74</p>
                         <p><i class="fas fa-phone"></i> +380509739567</p>
                         <p><i class="fas fa-envelope"></i> o.t.dubova@gmail.com</p>
                     </div>
