--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
                         <div class="card-content">
-                            <h3>Наша адреса</h3>
-                            <p>Україна, 09100, Київська обл., Білоцерківський р-н, місто Біла Церква, вул.Глазкова Максима, будинок 2</p>
+                            <h3>Адреса для прийому та обслуговування споживачів</h3>
+                            <p>01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74</p>
                         </div>
                     </div>
                     
@@ -222,7 +222,7 @@
                 <div class="footer-section">
                     <h4>Контакти</h4>
                     <div class="footer-contact">
-                        <p><i class="fas fa-map-marker-alt"></i> Україна, 09100, Київська обл., Білоцерківський р-н, місто Біла Церква, вул.Глазкова Максима, будинок 2</p>
+                        <p><i class="fas fa-map-marker-alt"></i> 01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74</p>
                         <p><i class="fas fa-phone"></i> +380509739567</p>
                         <p><i class="fas fa-envelope"></i> o.t.dubova@gmail.com</p>
                     </div>
