--- a/gas-supply.html
+++ b/gas-supply.html
@@ -141,7 +141,7 @@
                                 <div class="document-content-new">
                                     <h4>Порядок укладання договору з постачання природного газу</h4>
                                     <p>Регулює порядок укладання договорів постачання природного газу</p>
-                                    <a href="https://www.nerc.gov.ua/sferi-diyalnosti/prirodnij-gaz/pobutovi-spozhивачами/ukladennya-dogovoriv-pobutovimi-spozhивачами/ukladannya-dogovoru-z-postachannya-prirodnogo-gazu" target="_blank" class="document-link-new">
+                                    <a href="https://www.nerc.gov.ua/sferi-diyalnosti/prirodnij-gaz/pobutovi-spozhivachi/ukladennya-dogovoriv-pobutovimi-spozhivachami/ukladannya-dogovoru-z-postachannya-prirodnogo-gazu#:~:text=%D0%9F%D0%BE%D1%80%D1%8F%D0%B4%D0%BE%D0%BA%20%D1%83%D0%BA%D0%BB%D0%B0%D0%B4%D0%B0%D0%BD%D0%BD%D1%8F%20%D0%B4%D0%BE%D0%B3%D0%BE%D0%B2%D0%BE%D1%80%D1%83%20%D0%B7%20%D0%BF%D0%BE%D1%81%D1%82%D0%B0%D1%87%D0%B0%D0%BD%D0%BD%D1%8F%20%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%BD%D0%BE%D0%B3%D0%BE%20%D0%B3%D0%B0%D0%B7%D1%83%20%D0%B7%D0%B4%D1%96%D0%B9%D1%81%D0%BD%D1%8E%D1%94%D1%82%D1%8C%D1%81%D1%8F,%D0%B2%20%D0%9C%D1%96%D0%BD%D1%96%D1%81%D1%82%D0%B5%D1%80%D1%81%D1%82%D0%B2%D1%96%20%D1%8E%D1%81%D1%82%D0%B8%D1%86%D1%96%D1%97%20%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8%2006.11.2015%20%D0%B7%D0%B0%20%E2%84%96%201386%2F27831." target="_blank" class="document-link-new">
                                         <span>Переглянути документ</span>
                                         <i class="fas fa-external-link-alt"></i>
                                     </a>
