--- a/gas-supply.html
+++ b/gas-supply.html
@@ -26,6 +26,7 @@
                 <li><a href="about.html" class="nav-link">Про компанію</a></li>
                 <li><a href="gas-supply.html" class="nav-link long-title active" title="Діяльність з постачання природного газу">Діяльність з постачання природного газу</a></li>
                 <li><a href="documents.html" class="nav-link very-long-title" title="Діяльність з виробництва електричної енергії">Діяльність з виробництва електричної енергії</a></li>
+                <li><a href="trading-activity.html" class="nav-link long-title" title="Трейдерська діяльність">Трейдерська діяльність</a></li>
                 <li><a href="financial-reports.html" class="nav-link">Фінансова звітність</a></li>
                 <li><a href="contacts.html" class="nav-link">Контакти</a></li>
             </ul>
@@ -427,6 +428,7 @@
                         <a href="about.html">Про компанію</a>
                         <a href="gas-supply.html">Діяльність з постачання природного газу</a>
                         <a href="documents.html">Діяльність з виробництва електричної енергії</a>
+                        <a href="trading-activity.html">Трейдерська діяльність</a>
                         <a href="financial-reports.html">Фінансова звітність</a>
                         <a href="contacts.html">Контакти</a>
                     </div>
