--- a/trading-activity.html
+++ b/trading-activity.html
@@ -52,7 +52,7 @@
                 </div>
                 <h1 class="hero-title-new">Трейдерська діяльність</h1>
                 <p class="hero-description-new">
-                    Основним напрямком діяльності ТОВ "СТРУМ ЕНЕРДЖІ" є оптова торгівля електроенергією. Ціни на електрику для кожного покупця встановлюються індивідуально.
+                    Основним напрямком діяльності ТОВ "БІЛОЦЕРКІВВОДБУД" є оптова торгівля електроенергією. Ціни на електрику для кожного покупця встановлюються індивідуально.
                 </p>
             </div>
         </section>
@@ -65,7 +65,7 @@
                         <i class="fas fa-bolt"></i>
                     </div>
                     <h2>Трейдерська діяльність</h2>
-                    <p>Основним напрямком діяльності ТОВ "СТРУМ ЕНЕРДЖІ" є оптова торгівля електроенергією. Ціни на електрику для кожного покупця встановлюються індивідуально.</p>
+                    <p>Основним напрямком діяльності ТОВ "БІЛОЦЕРКІВВОДБУД" є оптова торгівля електроенергією. Ціни на електрику для кожного покупця встановлюються індивідуально.</p>
                 </div>
 
                 <!-- Особливості нашого підходу -->
