--- a/contacts.html
+++ b/contacts.html
@@ -185,7 +185,7 @@
                     <div class="header-icon-new">
                         <i class="fas fa-bolt"></i>
                     </div>
-                    <h2>Інформація про наявні будівлі та приміщення, де провадиться трейдерська діяльність</h2>
+                    <h2>Наявні будівлі де проводиться трейдерська діяльність</h2>
                     <p>Адреса приміщень для ведення трейдерської діяльності</p>
                 </div>
                 
