--- a/trading-activity.html
+++ b/trading-activity.html
@@ -307,7 +307,7 @@
                         <div class="contact-item">
                             <div class="contact-label">
                                 <i class="fas fa-building"></i>
-                                <span>Місцезнаходження будівель та приміщень для прийому та обслуговування споживачів:</span>
+                                <span>Наявні будівлі де проводиться трейдерська діяльність:</span>
                             </div>
                             <div class="contact-value">
                                 01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74
