--- a/contacts.html
+++ b/contacts.html
@@ -186,7 +186,7 @@
                         <i class="fas fa-bolt"></i>
                     </div>
                     <h2>Наявні будівлі де проводиться трейдерська діяльність</h2>
-                    <p>Адреса приміщень для ведення трейдерської діяльності</p>
+                    <p>Адреса де проводиться трейдерська діяльність</p>
                 </div>
                 
                 <div class="contact-cards-new" style="margin-top: 3rem;">
@@ -195,7 +195,7 @@
                             <i class="fas fa-building"></i>
                         </div>
                         <div class="card-content-new">
-                            <h3>Адреса приміщення для трейдерської діяльності</h3>
+                            <h3>Адреса де проводиться трейдерська діяльність</h3>
                             <p>01024, місто Київ, вул. Богомольця Академіка, будинок 7/14, приміщення 182К74</p>
                         </div>
                         <div class="card-action-new">
